Fix alignment in ProfileViewer

--- a/src/app/atoms/context-menu/ContextMenu.scss
+++ b/src/app/atoms/context-menu/ContextMenu.scss
@@ -44,7 +44,7 @@
 .context-menu__item {
   button[class^="btn"] {
     width: 100%;
-    justify-content: start;
+    justify-content: flex-start;
     border-radius: 0;
     box-shadow: none;
     white-space: nowrap;
